force-app/main/default/objects/Insurance_Verification__c/fields/Cross_Accum__c.field-meta.xml
<CustomField>
    <fullName>Cross_Accum__c</fullName>
    <label>Cross Accum</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>