force-app/main/default/objects/Insurance_Verification__c/fields/CT_Scan_72131__c.field-meta.xml
<CustomField>
    <fullName>CT_Scan_72131__c</fullName>
    <label>CT Scan: 72131</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>