force-app/main/default/objects/Insurance_Verification__c/fields/Date_of_Accident__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Accident__c</fullName>
    <label>Date of Accident</label>
    <type>Date</type>
</CustomField>