force-app/main/default/objects/Insurance_Verification__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Birth__c</fullName>
    <formula>IF( NOT( ISBLANK(Potential_Patient__r.Lead_Date_of_Birth__c) ) ,Potential_Patient__r.Lead_Date_of_Birth__c, Patient__r.Date_of_Birth__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date of Birth</label>
    <type>Date</type>
</CustomField>