force-app/main/default/objects/Insurance_Verification__c/fields/Deductible_Applied__c.field-meta.xml
<CustomField>
    <fullName>Deductible_Applied__c</fullName>
    <label>Deductible Applied</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>