force-app/main/default/objects/Insurance_Verification__c/fields/Disclosure_Required__c.field-meta.xml
<CustomField>
    <fullName>Disclosure_Required__c</fullName>
    <label>Disclosure Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>SHBP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>