force-app/main/default/objects/Insurance_Verification__c/fields/DME_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>DME_Additional_Comments__c</fullName>
    <label>DME Additional Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>