force-app/main/default/objects/Insurance_Verification__c/fields/DME_Auth_Phone__c.field-meta.xml
<CustomField>
    <fullName>DME_Auth_Phone__c</fullName>
    <label>DME Auth Phone#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>