force-app/main/default/objects/Insurance_Verification__c/fields/DME_No_OON__c.field-meta.xml
<CustomField>
    <fullName>DME_No_OON__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DME No OON</label>
    <type>Checkbox</type>
</CustomField>