force-app/main/default/objects/Insurance_Verification__c/fields/DME_Notes__c.field-meta.xml
<CustomField>
    <fullName>DME_Notes__c</fullName>
    <label>DME Notes</label>
    <type>TextArea</type>
</CustomField>