force-app/main/default/objects/Insurance_Verification__c/fields/DNU_Office__c.field-meta.xml
<CustomField>
    <fullName>DNU_Office__c</fullName>
    <label>DNU-Office</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ACU PERRINE</fullName>
            </value>
            <value>
                <fullName>ASC AT OLD BRIDGE</fullName>
            </value>
            <value>
                <fullName>EAST BRUNSWICK ACU</fullName>
            </value>
            <value>
                <fullName>EAST BRUNSWICK MD</fullName>
            </value>
            <value>
                <fullName>EAST BRUNSWICK OFFICE</fullName>
            </value>
            <value>
                <fullName>FREEHOLD ACU</fullName>
            </value>
            <value>
                <fullName>FREEHOLD OFFICE</fullName>
            </value>
            <value>
                <fullName>FREEHOLD OFFICE MD</fullName>
            </value>
            <value>
                <fullName>HUDSON REGIONAL HOSPITAL</fullName>
            </value>
            <value>
                <fullName>MATAWAN 144</fullName>
            </value>
            <value>
                <fullName>MATAWAN 145 MD</fullName>
            </value>
            <value>
                <fullName>MATAWAN ACU</fullName>
            </value>
            <value>
                <fullName>MATAWAN OFFICE MD</fullName>
            </value>
            <value>
                <fullName>OLD BRIDGE MD</fullName>
            </value>
            <value>
                <fullName>OLD BRIDGE OFFICE</fullName>
            </value>
            <value>
                <fullName>East Brunswick</fullName>
                <isActive>false</isActive>
                <label>East Brunswick</label>
            </value>
            <value>
                <fullName>Freehold</fullName>
                <isActive>false</isActive>
                <label>Freehold</label>
            </value>
            <value>
                <fullName>MD</fullName>
                <isActive>false</isActive>
                <label>MD</label>
            </value>
            <value>
                <fullName>Matawan</fullName>
                <isActive>false</isActive>
                <label>Matawan</label>
            </value>
            <value>
                <fullName>Old Bridge</fullName>
                <isActive>false</isActive>
                <label>Old Bridge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>