force-app/main/default/objects/Insurance_Verification__c/fields/DNU_Secondary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>DNU_Secondary_Insurance__c</fullName>
    <label>DNU Secondary Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cash Pay</fullName>
            </value>
            <value>
                <fullName>PIP/MVA</fullName>
            </value>
            <value>
                <fullName>Workers&apos; Compensation</fullName>
            </value>
            <value>
                <fullName>1199</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>AARP</fullName>
            </value>
            <value>
                <fullName>Aetna</fullName>
            </value>
            <value>
                <fullName>AmeriHealth</fullName>
            </value>
            <value>
                <fullName>BCBS of NJ</fullName>
            </value>
            <value>
                <fullName>Cigna</fullName>
            </value>
            <value>
                <fullName>Emblem Health/GHI</fullName>
            </value>
            <value>
                <fullName>Geha</fullName>
            </value>
            <value>
                <fullName>Humana</fullName>
            </value>
            <value>
                <fullName>Magnacare</fullName>
            </value>
            <value>
                <fullName>Omaha Life</fullName>
            </value>
            <value>
                <fullName>Optum Health</fullName>
            </value>
            <value>
                <fullName>Oxford</fullName>
            </value>
            <value>
                <fullName>Qualcare</fullName>
            </value>
            <value>
                <fullName>United Health Care</fullName>
            </value>
            <value>
                <fullName>Wellcare</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>