force-app/main/default/objects/Insurance_Verification__c/fields/Does_L3000_require_Auth__c.field-meta.xml
<CustomField>
    <fullName>Does_L3000_require_Auth__c</fullName>
    <label>Does L3000 require Auth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>