force-app/main/default/objects/Insurance_Verification__c/fields/Does_Plan_Follow_QMB_Program__c.field-meta.xml
<CustomField>
    <fullName>Does_Plan_Follow_QMB_Program__c</fullName>
    <label>Does Plan Follow QMB Program?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>