force-app/main/default/objects/Insurance_Verification__c/fields/Does_policy_have_Multiplan_benefits__c.field-meta.xml
<CustomField>
    <fullName>Does_policy_have_Multiplan_benefits__c</fullName>
    <label>Does policy have Multiplan benefits?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>