force-app/main/default/objects/Insurance_Verification__c/fields/Does_the_policy_cover_following_codes__c.field-meta.xml
<CustomField>
    <fullName>Does_the_policy_cover_following_codes__c</fullName>
    <inlineHelpText>Codes: E0730,A4556,A4557, L3000, E0221</inlineHelpText>
    <label>Does the policy cover following codes</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A4556</fullName>
            </value>
            <value>
                <fullName>A4557</fullName>
            </value>
            <value>
                <fullName>E0221</fullName>
            </value>
            <value>
                <fullName>E0730</fullName>
            </value>
            <value>
                <fullName>L3000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>