force-app/main/default/objects/Insurance_Verification__c/fields/DX_Body_Parts_Listed_On_Claim__c.field-meta.xml
<CustomField>
    <fullName>DX_Body_Parts_Listed_On_Claim__c</fullName>
    <label>DX/Body Parts Listed On Claim</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Arm - L</fullName>
            </value>
            <value>
                <fullName>Arm - R</fullName>
            </value>
            <value>
                <fullName>Back - Lower</fullName>
            </value>
            <value>
                <fullName>Back - Middle</fullName>
            </value>
            <value>
                <fullName>Foot/Ankle - L</fullName>
            </value>
            <value>
                <fullName>Foot/Ankle - R</fullName>
            </value>
            <value>
                <fullName>Hand - L</fullName>
            </value>
            <value>
                <fullName>Hand - R</fullName>
            </value>
            <value>
                <fullName>Hip - L</fullName>
            </value>
            <value>
                <fullName>Hip - R</fullName>
            </value>
            <value>
                <fullName>Knee - L</fullName>
            </value>
            <value>
                <fullName>Knee - R</fullName>
            </value>
            <value>
                <fullName>Leg - L</fullName>
            </value>
            <value>
                <fullName>Leg - R</fullName>
            </value>
            <value>
                <fullName>Neck</fullName>
            </value>
            <value>
                <fullName>Neuro/Head</fullName>
            </value>
            <value>
                <fullName>Shoulder - L</fullName>
            </value>
            <value>
                <fullName>Shoulder - R</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>