force-app/main/default/objects/Insurance_Verification__c/fields/DX_Limitations__c.field-meta.xml
<CustomField>
    <fullName>DX_Limitations__c</fullName>
    <label>DX Limitations</label>
    <length>255</length>
    <type>Text</type>
</CustomField>