force-app/main/default/objects/Insurance_Verification__c/fields/EFF_Date__c.field-meta.xml
<CustomField>
    <fullName>EFF_Date__c</fullName>
    <label>EFF Date</label>
    <type>Date</type>
</CustomField>