force-app/main/default/objects/Insurance_Verification__c/fields/Embedded_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>Embedded_Aggregate__c</fullName>
    <label>Embedded/Aggregate?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Embedded</fullName>
            </value>
            <value>
                <fullName>Aggregate</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
            <value>
                <fullName>Whichever Is Met First</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>