force-app/main/default/objects/Insurance_Verification__c/fields/EMG_95886__c.field-meta.xml
<CustomField>
    <fullName>EMG_95886__c</fullName>
    <label>EMG: 95886</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>