force-app/main/default/objects/Insurance_Verification__c/fields/Employeer__c.field-meta.xml
<CustomField>
    <fullName>Employeer__c</fullName>
    <label>Employeer</label>
    <length>100</length>
    <type>Text</type>
</CustomField>