force-app/main/default/objects/Insurance_Verification__c/fields/Follows_Medicare_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>Follows_Medicare_Guidelines__c</fullName>
    <label>Follows Medicare Guidelines</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>