force-app/main/default/objects/Insurance_Verification__c/fields/Follows_NJ_Orthotics_mandate__c.field-meta.xml
<CustomField>
    <fullName>Follows_NJ_Orthotics_mandate__c</fullName>
    <label>Follows NJ Orthotics mandate?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>