force-app/main/default/objects/Insurance_Verification__c/fields/Genvisc_J7320__c.field-meta.xml
<CustomField>
    <fullName>Genvisc_J7320__c</fullName>
    <label>Genvisc: J7320</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>