force-app/main/default/objects/Insurance_Verification__c/fields/Group_Report_Case__c.field-meta.xml
<CustomField>
    <fullName>Group_Report_Case__c</fullName>
    <label>Group Report Case#</label>
    <length>100</length>
    <type>Text</type>
</CustomField>