force-app/main/default/objects/Insurance_Verification__c/fields/Has_Medical_Insuarnce__c.field-meta.xml
<CustomField>
    <fullName>Has_Medical_Insuarnce__c</fullName>
    <label>Has Medical Insurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>