force-app/main/default/objects/Insurance_Verification__c/fields/Has_this_requirement_been_satisfied__c.field-meta.xml
<CustomField>
    <fullName>Has_this_requirement_been_satisfied__c</fullName>
    <label>Has this requirement been satisfied?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>