force-app/main/default/objects/Insurance_Verification__c/fields/High_Priority__c.field-meta.xml
<CustomField>
    <fullName>High_Priority__c</fullName>
    <label>Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 - Urgent/Same Day</fullName>
            </value>
            <value>
                <fullName>2 - Verify First</fullName>
            </value>
            <value>
                <fullName>3 - Urgent/Next Day</fullName>
            </value>
            <value>
                <fullName>4 - Regular Queue</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>