force-app/main/default/objects/Insurance_Verification__c/fields/Hospital_Urgent_Care_went_to__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Urgent_Care_went_to__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Hospital/Urgent Care went to?</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Insurance_Verification1</relationshipName>
    <type>Lookup</type>
</CustomField>