force-app/main/default/objects/Insurance_Verification__c/fields/How_often_do_you_retro_Auth__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_retro_Auth__c</fullName>
    <label>How often do you retro Auth?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Days</fullName>
            </value>
            <value>
                <fullName>Months</fullName>
            </value>
            <value>
                <fullName>Neither</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>