force-app/main/default/objects/Insurance_Verification__c/fields/How_often_is_patient_allowed_Orthotics__c.field-meta.xml
<CustomField>
    <fullName>How_often_is_patient_allowed_Orthotics__c</fullName>
    <label>How often is patient allowed Orthotics?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>