force-app/main/default/objects/Insurance_Verification__c/fields/How_often_is_the_patient_allowed_a_unit__c.field-meta.xml
<CustomField>
    <fullName>How_often_is_the_patient_allowed_a_unit__c</fullName>
    <label>How often is the patient allowed a unit?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>