force-app/main/default/objects/Insurance_Verification__c/fields/HSA_FSA_Flex_Card__c.field-meta.xml
<CustomField>
    <fullName>HSA_FSA_Flex_Card__c</fullName>
    <label>HSA/FSA/Flex Card</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HSA</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>FLEX</fullName>
            </value>
            <value>
                <fullName>HRA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>