force-app/main/default/objects/Insurance_Verification__c/fields/IME_s_Cut_Offs__c.field-meta.xml
<CustomField>
    <fullName>IME_s_Cut_Offs__c</fullName>
    <label>IME&apos;s/Cut Offs</label>
    <length>75</length>
    <type>Text</type>
</CustomField>