force-app/main/default/objects/Insurance_Verification__c/fields/In_Network_Coinsurance__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Coinsurance__c</fullName>
    <label>In-Network Coinsurance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0/100</fullName>
            </value>
            <value>
                <fullName>5/95</fullName>
            </value>
            <value>
                <fullName>10/90</fullName>
            </value>
            <value>
                <fullName>15/85</fullName>
            </value>
            <value>
                <fullName>20/80</fullName>
            </value>
            <value>
                <fullName>25/75</fullName>
            </value>
            <value>
                <fullName>30/70</fullName>
            </value>
            <value>
                <fullName>35/65</fullName>
            </value>
            <value>
                <fullName>40/60</fullName>
            </value>
            <value>
                <fullName>45/55</fullName>
            </value>
            <value>
                <fullName>50/50</fullName>
            </value>
            <value>
                <fullName>55/45</fullName>
            </value>
            <value>
                <fullName>60/40</fullName>
            </value>
            <value>
                <fullName>65/35</fullName>
            </value>
            <value>
                <fullName>70/30</fullName>
            </value>
            <value>
                <fullName>75/25</fullName>
            </value>
            <value>
                <fullName>80/20</fullName>
            </value>
            <value>
                <fullName>85/15</fullName>
            </value>
            <value>
                <fullName>90/10</fullName>
            </value>
            <value>
                <fullName>95/5</fullName>
            </value>
            <value>
                <fullName>100/0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>