force-app/main/default/objects/Insurance_Verification__c/fields/In_Network_Fam_OOP_Met__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Fam_OOP_Met__c</fullName>
    <label>In Network Fam OOP Met</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>