force-app/main/default/objects/Insurance_Verification__c/fields/In_Network_Ind_Ded__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Ind_Ded__c</fullName>
    <label>In Network Ind Ded</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>