force-app/main/default/objects/Insurance_Verification__c/fields/In_Network_Notes__c.field-meta.xml
<CustomField>
    <fullName>In_Network_Notes__c</fullName>
    <label>In Network Notes</label>
    <length>100</length>
    <type>Text</type>
</CustomField>