force-app/main/default/objects/Insurance_Verification__c/fields/Individual_Ded__c.field-meta.xml
<CustomField>
    <fullName>Individual_Ded__c</fullName>
    <label>Individual Ded?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>